--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=SpringProject3
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/StudentSpring?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=BCV8376u#
+spring.datasource.password=Add your MySQL Database password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
